<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LoginFragment">

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_30"
        android:layout_marginTop="@dimen/dim_30"
        android:text="@string/txt_login"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_30"
        android:layout_marginTop="40dp"
        android:text="@string/text_email_indicador"
        android:textSize="@dimen/dim_text_14"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_header" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_30"
        android:layout_marginTop="@dimen/dim_5"
        android:layout_marginEnd="@dimen/dim_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mail">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_30"
        android:layout_marginTop="@dimen/dim_30"
        android:text="@string/txt_password_header"
        android:textSize="@dimen/dim_text_14"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTextEmailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiltTextTextEmailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_30"
        android:layout_marginTop="@dimen/dim_5"
        android:layout_marginEnd="@dimen/dim_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password">

        <EditText
            android:id="@+id/editTextTextEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginTop="@dimen/dim_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_text_16"
            android:layout_marginBottom="@dimen/dim_10"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>